# Library

./: README.md
makhrov_m_a/: CMakeLists.txt  CMakePresents.json  CMakePresets.json  Doxyfile
makhrov_m_a/bin.dbg/: rational_test.ilk
makhrov_m_a/prj.cw/: CMakeLists.txt
makhrov_m_a/prj.cw/include/: CMakeLists.txt
makhrov_m_a/prj.cw/include/interpolation/: CMakeLists.txt  interpolation.cpp
makhrov_m_a/prj.cw/include/interpolation/include/interpolation/: interpolation.hpp
makhrov_m_a/prj.cw/test_app/: CMakeLists.txt  test_interpolation.cpp
makhrov_m_a/prj.lab/: CMakeLists.txt
makhrov_m_a/prj.lab/arrayd/: arrayd.cpp
makhrov_m_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
makhrov_m_a/prj.lab/matrixs/: matrixs.cpp
makhrov_m_a/prj.lab/orto/: orto.20230519
makhrov_m_a/prj.lab/rational/: rational.cpp
makhrov_m_a/prj.lab/rational/include/rational/: rational.hpp
makhrov_m_a/prj.test/: CMakeLists.txt  arrayd_test.cpp  matrixs_test.cpp  rational_test.cpp
